package elevador;

public interface Comando {
    void executar();
}
